[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# project metadata

[project]
name = "HexBug"
version = "0.1.0"
readme = "README.md"
authors = [
    { name="object-Object" },
]
keywords = ["hexdoc"]
requires-python = ">=3.11,<3.12"
dependencies = []

[project.optional-dependencies]
aws-cdk = [
    "aws-cdk-lib==2.102.0",
    "aws-cdk-github-oidc==2.4.0",
]
codedeploy = [
    "boto3~=1.34",
    "boto3-stubs-lite[s3]",
    "typer~=0.9",
]
scripts = [
    "discord.py~=2.3.2",
    "jproperties~=2.1",
    "typing_extensions~=4.7",
    "ruff~=0.1.4,!=0.1.12",
    "hexdoc==1!0.1.0a10",
    "hexdoc-hexgloop @ https://github.com/SamsTheNerd/HexGloop/raw/af72e6cc318d/docs/v/latest/main/dist/hexdoc_hexgloop-0.2.1.1.0.dev0-py3-none-any.whl",
    "hexdoc-oneironaut==0.2.2.1.0",
    "hexdoc-mediaworks==1.0.6.1.0.dev0",
]
runtime = [
    "HexBug[scripts]",
    "networkx~=3.1",
    "matplotlib~=3.6",
    "lark~=1.1",
    "numpy~=1.23",
    "python-dotenv~=0.21",
    "sty~=1.0",
    "pillow~=9.5",
    "semver~=3.0",
]
target-any = [
    "hexnumgen @ git+https://github.com/object-Object/hexnumgen-rs.git@70d683ee9b",
]
target-linux = [ # x86_64-unknown-linux-gnu
    "hexnumgen @ {root:uri}/vendor/hexnumgen-0.2.0-cp311-cp311-manylinux_2_28_x86_64.whl",
]
dev = [
    "HexBug[aws-cdk,codedeploy,scripts,runtime,target-any]",
]

[project.urls]
Source = "https://github.com/object-Object/HexBug"

[tool.hatch.metadata]
allow-direct-references = true

# directory inclusion

[tool.hatch.build]
include = [
    "src/HexBug",
    "vendor/*",
    "gradle.properties",
]

[tool.hatch.build.targets.wheel]
sources = [
    "src",
    "vendor",
]

# hexdoc entry points

[project.entry-points.hexdoc]
hexbug = "HexBug._hooks:HexBugPlugin"

# linting

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

include = ["src"]

enableExperimentalFeatures = true

typeCheckingMode = "basic"

# strictDictionaryInference = true
# strictListInference = true
# strictSetInference = true

# reportAssertAlwaysTrue = "error"
# reportConstantRedefinition = "error"
# reportDeprecated = "error"
# reportDuplicateImport = "error"
# reportFunctionMemberAccess = "error"
# reportIncompatibleMethodOverride = "error"
# reportIncompleteStub = "error"
# reportInconsistentConstructor = "error"
# reportInvalidStringEscapeSequence = "error"
# reportInvalidStubStatement = "error"
# reportInvalidTypeVarUse = "error"
# reportMatchNotExhaustive = "error"
# reportMissingParameterType = "error"
# reportMissingTypeStubs = "error"
# reportOverlappingOverload = "error"
# reportSelfClsParameterName = "error"
# reportTypeCommentUsage = "error"
# reportUnknownParameterType = "error"
# reportUnnecessaryCast = "error"
# reportUnnecessaryContains = "error"
# reportUnsupportedDunderAll = "error"
# reportUntypedBaseClass = "error"
# reportUntypedClassDecorator = "error"
# reportUntypedFunctionDecorator = "error"
# reportUntypedNamedTuple = "error"
# reportWildcardImportFromLibrary = "error"

# reportMissingTypeArgument = "warning"
# reportPrivateUsage = "warning"
# reportUnnecessaryComparison = "warning"
# reportUnnecessaryIsInstance =  	"warning"
# reportUnusedClass = "warning"
# reportUnusedExpression = "warning"
# reportUnusedFunction = "warning"
# reportUnusedImport = "warning"
# reportUnusedVariable = "warning"

# TODO: move back to warning
reportUnknownLambdaType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"

reportUnknownVariableType = "none"
reportIncompatibleVariableOverride = "none"
