[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "HexBug-bot"
requires-python = ">=3.12"
dependencies = [
    "HexBug-common",
    "alembic>=1.16.5",
    # 2.6.3: github.com/Rapptz/discord.py/issues/10291
    "discord-py>=2.6.2,!=2.6.3",
    "fastapi>=0.115.12",
    "fluent-runtime>=0.4.0",
    "hex-renderer-py>=0.1.5",
    "hexdoc>=1!0.1.0a33",
    "hexnumgen>=0.4.0",
    "httpx>=0.28.1",
    "humanize>=4.13.0",
    "lark[interegular]>=1.3.0",
    "matplotlib>=3.10.1",
    "pfzy>=0.3.4",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic-settings>=2.8.0",
    "pydantic>=2.10.6",
    "sqlalchemy[asyncio]>=2.0.43",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
hexbug = "HexBug.app:app"

[project.optional-dependencies]
data = [
    "hexdoc-hexcasting==0.11.2.*",
    # hex addons (PyPI)
    "hexdoc-caduceus==0.1.1.1.20.1.*",
    "hexdoc-dthexcasting==1.0.1.*",
    "hexdoc-hex-ars-link==0.9.2.4.*",
    "hexdoc-hexcassettes==1.1.4.*",
    "hexdoc-hexcellular==1.1.0.*",
    "hexdoc-hexchanting==1.1.3.*",
    "hexdoc-hexdebug==0.7.0.1.20.1.*",
    "hexdoc-hexdim==1.2.1.1.20.*",
    "hexdoc-hexflow==0.3.1.1.*",
    "hexdoc-hexgender==1.0.4.*",
    "hexdoc-hexmapping==0.0.3.*",
    "hexdoc-hexodus==1.0.0.*",
    "hexdoc-hexoverpowered==0.8.2.*",
    "hexdoc-hexparse==1.4.0.*",
    # workaround for https://github.com/miyucomics/hexpose/commit/26709051b306e70982cb904ac2776eb7f9da9f4d
    # we can switch back to PyPI for the next release
    "hexdoc-hexpose==1.0.0.1.0.0+hexbug",
    "hexdoc-hextrace==0.1.0.1.20.1.*",
    "hexdoc-hextrogen==1.1.0.*",
    "hexdoc-hextweaks==5.3.3.*",
    "hexdoc-hexweb==1.0.4.*",
    "hexdoc-hierophantics==1.3.3.*",
    "hexdoc-ioticblocks==1.0.2.1.20.1.*",
    "hexdoc-lapisworks==1.5.5.*",
    "hexdoc-lessertp==1.2.1.*",
    "hexdoc-mediatransport==1.0.2.1.20.1.*",
    "hexdoc-moreiotas==0.1.1.*",
    "hexdoc-slate-work==1.0.3.*",
    # hex addons (GitHub)
    "hexdoc-complexhex",
    "hexdoc-efhexs",
    "hexdoc-ephemera",
    "hexdoc-hexal",
    "hexdoc-hexic",
    "hexdoc-hexical",
    "hexdoc-hexstruction",
    "hexdoc-hextended",
    "hexdoc-oneironaut",
    "hexdoc-overevaluate",
    "hexdoc-scryglass",
]

[tool.uv.sources]
HexBug-common = { workspace = true }
hexdoc-complexhex = { url = "https://github.com/kineticneticat/ComplexHex/raw/51cf2bbac7183cd6b4be360f205bd20d99d56952/docs/v/latest/0.1.x/dist/hexdoc_complexhex-0.1.6.1.0.dev0-py3-none-any.whl" }
hexdoc-efhexs = { url = "https://github.com/miyucomics/special-efhexs/raw/8029ab75e0d42c92795612639d3dae3170520ddd/docs/v/latest/main/dist/hexdoc_efhexs-1.0.0.1.0.0-py3-none-any.whl" }
hexdoc-ephemera = { url = "https://github.com/beholderface/Ephemera/raw/74e80eddd991059785eede8435981716480b69ae/docs/v/latest/1.20.1/dist/hexdoc_ephemera-0.3.0.1.0.dev0-py3-none-any.whl" }
hexdoc-hexal = { url = "https://github.com/FallingColors/Hexal/raw/49cf10f0c8586e5887f40cae1d3075b0acfb13e2/docs/v/latest/main/dist/hexdoc_hexal-0.3.0.1.0rc4-py3-none-any.whl" }
hexdoc-hexic = { url = "https://hexic.pool.net.eu.org/v/1.3.4/1.1/hexdoc_hexic-1.3.4.1.1-py3-none-any.whl" }
hexdoc-hexical = { url = "https://github.com/miyucomics/hexical/raw/9e065b5e7995efc9045ab8cecd1f8838106df171/docs/v/latest/main/dist/hexdoc_hexical-2.0.0.1.0.0-py3-none-any.whl" }
hexdoc-hexstruction = { url = "https://github.com/PetersonE1/hexstruction/raw/510da7fea2f52d6497c50753990bbc5919ee71ad/docs/v/latest/main/dist/hexdoc_hexstruction-1.2.1.1.20.1.1.0-py3-none-any.whl" }
hexdoc-hextended = { url = "https://github.com/abilliontrillionstars/hextended-staves/raw/0e6e0a61b7f4d3e79761b216cfebc1141e19b30b/docs/v/latest/main/dist/hexdoc_hextended-2.0.1.1.0.dev0-py3-none-any.whl" }
hexdoc-oneironaut = { url = "https://github.com/beholderface/oneironaut/raw/99b7c992e2e2230b39ec9adceed4b1b2fed15831/docs/v/latest/1.20.1/dist/hexdoc_oneironaut-0.5.0.1.0-py3-none-any.whl" }
hexdoc-overevaluate = { url = "https://github.com/miyucomics/overevaluate/raw/6c92a93c51fd966cf3709468f0a126c746ae85ba/docs/v/latest/main/dist/hexdoc_overevaluate-1.0.0.1.0.0-py3-none-any.whl" }
hexdoc-scryglass = { url = "https://github.com/miyucomics/scryglass/raw/2b414d0ba9e9c0770c8b13bb01a67398630a4690/docs/v/latest/main/dist/hexdoc_scryglass-1.0.0.1.0.0-py3-none-any.whl" }

[tool.hatch.version]
source = "regex"
path = "../common/src/HexBug/common/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/HexBug"]
