[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "HexBug-bot"
requires-python = ">=3.12"
dependencies = [
    "HexBug-data",
    "alembic>=1.16.5",
    # 2.6.3: github.com/Rapptz/discord.py/issues/10291
    "discord-py>=2.6.2,!=2.6.3",
    "fastapi>=0.115.12",
    "fluent-runtime>=0.4.0",
    "hex-renderer-py>=0.1.5",
    "hexnumgen>=0.4.0",
    "httpx>=0.28.1",
    "humanize>=4.13.0",
    "matplotlib>=3.10.1",
    "pfzy>=0.3.4",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic-settings>=2.8.0",
    "regex>=2025.11.3",
    "sqlalchemy[asyncio]>=2.0.43",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
hexbug = "HexBug.app:app"

[project.optional-dependencies]
data = [
    "HexBug-data[full]",
]

[tool.uv.sources]
HexBug-data = { workspace = true }

[tool.hatch.version]
source = "regex_commit"
path = "src/HexBug/__version__.py"
commit_message = "Bump version to `{new_version}`"
tag_message = "Bump version to `{new_version}`"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/HexBug"]
