[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "HexBug-common"
requires-python = ">=3.13"
dependencies = []

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
source = "regex"
path = "src/HexBug/common/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/HexBug"]
