[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "HexBug-common"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.version]
source = "regex_commit"
path = "src/HexBug/common/__version__.py"
commit_message = "Bump version to `{new_version}`"
tag_message = "Bump version to `{new_version}`"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/HexBug"]
