[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "HexBug-infrastructure"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-github-oidc>=2.4.1",
    "aws-cdk-lib>=2.180.0",
    "object-ci[aws-cdk] @ git+https://github.com/object-Object/ci@v0",
]

[tool.hatch.version]
source = "regex"
path = "../bot/src/HexBug/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/HexBug"]
