[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "HexBug-web"
requires-python = ">=3.12"
dependencies = [
    "HexBug-bot",
    "HexBug-common",
    "tomli-w>=1.2.0",
]

[project.optional-dependencies]
data = [
    "HexBug-bot[data]",
]

[tool.uv.sources]
HexBug-bot = { workspace = true }
HexBug-common = { workspace = true }

[tool.hatch.version]
source = "regex"
path = "../common/src/HexBug/common/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/HexBug"]

[project.entry-points.hexdoc]
bookofhexxy = "HexBug.web._hooks:BookOfHexxyPlugin"
