[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "HexBug-web"
requires-python = ">=3.12"
dependencies = [
    "HexBug-bot",
    "HexBug-data[full]",
    "tomli-w>=1.2.0",
]

[tool.uv.sources]
HexBug-bot = { workspace = true }
HexBug-data = { workspace = true }

[tool.hatch.version]
source = "regex"
path = "../bot/src/HexBug/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/HexBug"]

[project.entry-points.hexdoc]
bookofhexxy = "HexBug.web._hooks:BookOfHexxyPlugin"
